Add scroll animations and update social media links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Spectral+SC:700,800|Fredericka+the+Great" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/style.css">
+  <script src="https://use.fontawesome.com/d9824fe07b.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="{{ site.url }}/js/main.js"></script>
 </head>
 <body>
 
 <div id='nav'>
+  <div id="nav-sm">
+    <a href=""><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+    <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+  </div>
   <div id='hamburger' onclick='hamburger(this)'>
     <div class='bar1'></div>
     <div class='bar2'></div>
@@ -46,6 +51,10 @@
 
 <div id="footer">
   &copy; Gernene 2016-2018
+  <div id="footer-sm">
+    <a href=""><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+    <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+  </div>
 </div>
 
 </body>
