--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,10 @@ h1, h2 {
   background: #bc4b00;
   border-bottom: 1px solid rgba(0, 0, 0, .5);
   box-shadow: 0 0 1rem .3rem rgba(0, 0, 0, .8);
+  display: flex;
   font-family: 'Spectral SC', serif;
   font-size: 1.4rem;
+  padding: 0 2rem;
   position: relative;
   text-align: center;
   z-index: 10;
@@ -73,6 +75,31 @@ h1, h2 {
 #nav li a:hover {
   color: rgba(255, 255, 255, .7);
   background: #992d00;
+}
+
+#nav-sm {
+  align-items: center;
+  display: flex;
+  flex: 1;
+  text-align: left;
+}
+
+#nav-sm .fa {
+  align-self: center;
+  border: 2px solid #ddd;
+  border-radius: 50%;
+  color: #ddd;
+  line-height: 2rem;
+  margin: 0 .5rem 0 0;
+  width: 2rem;
+  text-align: center;
+  transition: all ease .4s;
+}
+
+#nav-sm a:hover .fa {
+  color: rgba(255, 255, 255, .7);
+  background: #992d00;
+  border: 2px solid rgba(255, 255, 255, .7);
 }
 
 #hamburger {
@@ -116,6 +143,17 @@ h1, h2 {
   color: #aaa;
   padding: 1.5% 5%;
   text-align: center;
+}
+
+#footer-sm { padding: .5rem 0; }
+
+#footer-sm a { color: #aaa; }
+
+#footer-sm a:hover { opacity: .8; }
+
+#footer-sm .fa {
+  font-size: 1.8rem;
+  padding: 0 .2rem;
 }
 
 #intro {
@@ -224,7 +262,7 @@ h1, h2 {
   margin: 0 0 3rem 0;
 }
 
-#index-mountains div {
+#index-mountains div.in-view {
 	width: 0;
 	height: 0;
 	border-left: 5rem solid transparent;
@@ -241,7 +279,14 @@ h1, h2 {
   border-radius: 50%;
   width: auto;
   height: auto;
+  opacity: 0;
+  transform: translate3d(0, 100%, 0);
+  transition: 1.5s;
+}
+
+#index-mountains div:last-child.in-view {
   opacity: .6;
+  transform: translate3d(0, 0, 0);
 }
 
 #index-about {
@@ -329,11 +374,14 @@ h1, h2 {
 @media only screen and (max-width: 900px) {
 
 #nav {
+  padding: 0;
   position: fixed;
   text-align: right;
   top: 0;
   width: 100%;
 }
+
+#nav-sm { padding: 0 2%; }
 
 #nav nav { display: none; }
 
