--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,15 +11,17 @@
 </head>
 <body>
 
-<div id='nav'>
-  <div id="nav-sm">
-    <a href=""><i class="fa fa-github-alt" aria-hidden="true"></i></a>
-    <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-  </div>
-  <div id='hamburger' onclick='hamburger(this)'>
-    <div class='bar1'></div>
-    <div class='bar2'></div>
-    <div class='bar3'></div>
+<div id="nav">
+  <div id="nav-top">
+    <div id="nav-sm">
+      <a href=""><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+      <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+    </div>
+    <div id='hamburger' onclick='hamburger(this)'>
+      <div class='bar1'></div>
+      <div class='bar2'></div>
+      <div class='bar3'></div>
+    </div>
   </div>
   <nav>
     <ul>
