--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,25 @@ h1, h2 {
   padding: 2% 7%;
 }
 
+#contact-error,
+#contact-success {
+  box-shadow: .1rem .1rem .5rem .1rem rgba(0, 0, 0, .8);
+  display: none;
+  margin: 0 0 2rem 0;
+  padding: 1rem;
+  text-align: center;
+}
+
+#contact-error {
+  background: #ef8570;
+  color: #490c00;
+}
+
+#contact-success {
+  background: #dee5b0;
+  color: #2c3300;
+}
+
 #about-definitions {
   background: #ddd;
   box-shadow: .1rem .1rem .5rem .1rem rgba(0, 0, 0, .8);
