--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Gernene</title>
+  <meta name="description" content="I'm a web developer and designer who builds
+  custom websites that are both beautiful and functional. Request a quote today!">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Spectral+SC:700,800|Fredericka+the+Great" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/style.css">
@@ -14,8 +16,8 @@
 <div id="nav">
   <div id="nav-top">
     <div id="nav-sm">
-      <a href=""><i class="fa fa-github-alt" aria-hidden="true"></i></a>
-      <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      <a href="https://github.com/Gernene" target="blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+      <a href="https://www.instagram.com/gernene.tan" target="blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
     </div>
     <div id='hamburger' onclick='hamburger(this)'>
       <div class='bar1'></div>
@@ -54,8 +56,8 @@
 <div id="footer">
   &copy; Gernene 2016-2018
   <div id="footer-sm">
-    <a href=""><i class="fa fa-github-alt" aria-hidden="true"></i></a>
-    <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+    <a href="https://github.com/Gernene" target="blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/gernene.tan" target="blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
   </div>
 </div>
 
