--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,1 +1,22 @@
-
+<nav>
+  <ul>
+    <li>
+      <a href='/'>Home</a>
+    </li>
+    <li>
+      <a href='/about'>About</a>
+    </li>
+    <li>
+      <a href='/web'>Websites</a>
+    </li>
+    <li>
+      <a href='/art'>Art</a>
+    </li>
+    <li>
+      <a href='/resume'>Resume</a>
+    </li>
+    <li>
+      <a href='/contact'>Contact</a>
+    </li>
+  </ul>
+</nav>
