Update meta description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <title>Gernene</title>
-  <meta name="description" content="I'm a web developer and designer who builds
-  custom websites that are both beautiful and functional. Request a quote today!">
+  <meta name="description" content="I'm Gernene - Web designer, developer,
+  graphic artist, and content writer. I build beautiful and intuitive websites
+  for people with great ideas and products.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.url }}/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/apple-touch-icon-114x114.png" />
