--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
   <meta name="msapplication-square150x150logo" content="{{ site.url }}/mstile-150x150.png" />
   <meta name="msapplication-wide310x150logo" content="{{ site.url }}/mstile-310x150.png" />
   <meta name="msapplication-square310x310logo" content="{{ site.url }}/mstile-310x310.png" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Spectral+SC:700,800|Fredericka+the+Great" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Poppins:300,300i,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/style.css">
   <script src="https://use.fontawesome.com/d9824fe07b.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
