--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,18 @@ html {
 body {
   background: #EBFBFB;
   color: #162F3F;
+  display: flex;
   font-family: 'Poppins', sans-serif;
   font-size: 1.2rem;
-  height: 100%;
+  justify-content: center;
   margin: 0;
   padding: 0;
+}
+
+.wrapper {
+  box-shadow: 0 0 .4rem .1rem rgba(0, 0, 0, .3);
+  max-width: 1500px;
+  overflow-x: hidden;
 }
 
 a {
