Finish fhs case study

--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -1,5 +1,7 @@
 <a class="feature" href="/">
-    <div class="feature-img" style="background-image: url('{{ site.url }}/img/{{ include.img }}');"></div>
+    <div class="feature-img-box">
+        <img src="{{ site.url }}/img/{{ include.img }}" class="feature-img">
+    </div>
     <div class="feature-info">
         <div class="feature-info-top">
             <h4>{{ include.title }}</h4>
